[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "infoleakhunter"
version = "1.0.0"
description = "Automated Information Disclosure Vulnerability Scanner"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "InfoLeakHunter" }
]
keywords = ["security", "scanner", "information-disclosure", "pentesting", "bug-bounty"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Vulnerability Management",
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "rich>=13.7.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dns = ["dnspython>=2.6.0"]
metadata = ["python-docx>=1.1.0", "openpyxl>=3.1.0", "python-pptx>=0.6.23", "PyPDF2>=3.0.0"]
all = [
    "dnspython>=2.6.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "PyPDF2>=3.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/mridha-92/infoleakhunter"
Repository = "https://github.com/mridha-92/infoleakhunter"
Issues = "https://github.com/mridha-92/infoleakhunter/issues"

[project.scripts]
infoleakhunter = "infoleakhunter.cli:main"

[tool.setuptools.packages.find]
include = ["infoleakhunter*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["infoleakhunter/tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["infoleakhunter"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
